tests/parser/statement_assign_err5.mtp
begin
	(*Bad assignment, no value or assignment*)

	(*assignment statement: with factor (constant)*)
	something;
	
end
.